# cante

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  GOTCHAS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  promote-allow.txt  promote-deny.txt  pytest.ini
.github/workflows/: ci.yml  contamination.yml
core/: pyproject.toml
core/cante/: __init__.py  auth.py  bus.py  channel.py  db.py  evolution.py  guards.py  llm.py  metrics.py  models.py  observability.py  redis.py  secrets.py  security.py  settings.py  tenant.py  tools.py
core/cante/adapters/: __init__.py  anthropic.py  openai_compatible.py
core/tests/: conftest.py  test_auth.py  test_channel.py  test_guards.py  test_llm.py  test_security.py  test_tenant.py  test_tools_ssrf.py
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  hpa.yaml  secrets.yaml  service.yaml
docs/: backup-and-restore.md  decision-db-schema-evolution.md  runbook-evolution-reset.md  webhook-persistence.md
docs/reports/: .state.json  README.md
examples/mock-backend/: Dockerfile  app.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_learning_enrichment.py  0003_contact_status.py
scripts/: contamination-scan.sh  match-globs.sh  monitor-evolution-errors.sh  monitor-health.sh  promote-paths.sh
seeds/: __main__.py  run.py
services/api/: Dockerfile  main.py  pyproject.toml
services/ingress/: Dockerfile  main.py  pyproject.toml
services/scheduler/: Dockerfile  main.py  pyproject.toml
services/sender/: Dockerfile  main.py  pyproject.toml
services/worker/: Dockerfile  main.py  pyproject.toml
tests/: conftest.py  smoke.py  test_api_conversations.py  test_bus.py  test_migrations.py  test_security_api.py  test_seeds.py  test_worker_agent_loop.py  test_worker_process.py
tests/fixtures/: evolution_webhook_media.json  evolution_webhook_text.json
(+39 files in other folders)
