[project]
name = "cante-core"
version = "0.1.0"
description = "Cante shared core — models, LLM adapters, guards, tools, event bus, channel interface"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4's bcrypt backend is incompatible with bcrypt>=4 (it probes
    # with a >72-byte secret during init; bcrypt>=4 raises instead of truncating).
    # Pin to the 3.2.x line until passlib ships a fix.
    "bcrypt>=3.2,<4.0",
    "cryptography>=42.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N818"]  # Exception name "LLMAPITimeout" is intentional — it IS a timeout

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
